typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors7.ts.stderr
error: TS1094
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors7.ts:2:15
  |
2 | var v = { get foo(v: number) { } };
  |               ^^^

error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors7.ts:2:15
  |
2 | var v = { get foo(v: number) { } };
  |               ^^^

